--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import-normalize; /* bring in normalize.css styles */
 
+html {
+  height: 100%;
+}
+
 body {
   margin: 0 auto;
   font-size: 14px;
@@ -7,9 +11,9 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
+  padding: 0;
+  font-family: sans-serif;
   background: #2c1111;
-  background-size: 100%;
-  background-attachment: fixed;
 }
 
 code {
